# ame_quiz_bot

./: .gitignore  Dockerfile  Makefile  README.md  data.db  docker-compose.yml  pyproject.toml  requirements.txt
docs/: demo_script.md
src/: config.py  main.py
src/bot/: __init__.py  handlers_admin.py  handlers_attempts.py  handlers_misc.py  handlers_polls.py  handlers_quiz_creation.py  rate_limit.py  routes.py  states.py
src/db/: models.py  repo.py  session.py
src/parser/: quiz_parser.py
tests/: test_parser.py
