[project]
name = "ame-quiz-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.10.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.34",
    "aiosqlite==0.20.0",
    "alembic==1.13.2",
    "fastapi==0.114.2",
    "uvicorn==0.30.6",
    "pydantic==2.8.2",
    "rapidfuzz==3.9.6",
    "greenlet==3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
